@@ -1,8 +1,17 @@
 #' @title Cartography Package
 #' @name cartography
 #' @description 
-#' The cartography package proposes thematic mapping functions.
-#' It allows various cartographic representation:  
+#' The cartography package allows various cartographic representations 
+#' such as proportional symbols, chroropleth, typology, flows or discontinuities. 
+#' In addition it also proposes some useful features like cartographic palettes, 
+#' layout (scale, north arrow, title…), labels, legends or access to cartographic 
+#' API to ease the graphic presentation of maps.
+#' 
+#' A vignette contains commented scripts on how to build various types of maps 
+#' with \code{cartography}: \cr
+#' \code{vignette(topic = "cartography")}
+#' 
+#' Main functions : 
 #' \itemize{
 #' \item{Proportional symbols maps (circles, squares, bars)\cr 
 #' \link{propSymbolsLayer}, \link{propSymbolsChoroLayer}, 
@@ -15,18 +24,13 @@
 #' \link{getLinkLayer}, \link{propLinkLayer}, \link{gradLinkLayer}}
 #' \item{Discontinuities maps (variable size and color of borders)\cr
 #' \link{getBorders}, \link{discLayer}}
-#' \item{...}
-#' }
-#' 
-#' It also proposes some additional useful features like:
-#' \itemize{
 #' \item{Cartographic palettes (palettes adapted to cartographic representation)\cr
 #' \link{carto.pal}}
 #' \item{Layout (scale, north arrow, title...)\cr
 #' \link{layoutLayer}}
 #' \item{Labels\cr
 #' \link{labelLayer}}
-#' \item{Nice legends \cr
+#' \item{Legends \cr
 #' \link{legendBarsSymbols},
 #' \link{legendChoro}, \link{legendCirclesSymbols}, \link{legendGradLines}, 
 #' \link{legendPropLines}, \link{legendPropTriangles}, 
@@ -37,16 +41,7 @@
 #' }
 #' \item{Irregular polygons to regular grid transformation with data handling\cr
 #' \link{getGridLayer}, \link{getGridData}}
-#' \item{...}
 #' }
-#' 
-#' Functions starting with "get" build R objects.\cr
-#' Functions ending with "Layer" plot cartographic layers.\cr
-#' Functions starting with "legend" plot legends.\cr
-#' 
-#' The vignette contains commented scripts on how to build various types of maps 
-#' with \code{cartography}: 
-#' \code{vignette(topic = "cartography")}
 #' 
 #' @docType package
 NULL
