@@ -1,6 +1,7 @@
 cartography version 1.3 (Release date: 2016-)
 ==============
-
+Minor changes:
+* Change min value in prop*Layer legends
 
 
 
